--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">ShackleHotelBuddy</string>
+    <string name="select_guest_date_time">Select Guests, Date and Time</string>
+    <string name="img_desc_check_in_date">Check-in date icon</string>
+    <string name="img_desc_check_out_date">Check-out date icon</string>
+    <string name="check_in_date">Check-in date</string>
+    <string name="check_out_date">Check-out date</string>
+    <string name="date_format">DD/MM/YYYY</string>
+    <string name="img_desc_adult">Adult Person Icon</string>
+    <string name="img_desc_child">Child Icon</string>
+    <string name="adults">Adult(s)</string>
+    <string name="children">Children</string>
+    <string name="zero">0</string>
+    <string name="recent_searches">Recent Searches</string>
+    <string name="invalid_info">Please Enter Valid Information</string>
+    <string name="search">Search</string>
+    <string name="search_results">Search Results</string>
+    <string name="no_data">No Data</string>
 </resources>
